# hulotte

./: .gitignore  CMakeLists.txt  LICENSE  README.md  add_custom_module.py  add_hardware_module.py  create_project.py  hulotte.txt  hulotte_utils.py  install_dependencies.py  test.sh  test_combinations.sh
Common/streampu/hw/: UART_fifoed_send_V1.sv  VerilatorSimulation.cpp  VerilatorSimulation.hpp  uart_recv.sv  universal_simulation_top.sv
Common/streampu/sw/: MySource.hpp  SerialPort.cpp  SerialPort.hpp
examples/: CMakeLists.txt
examples/custom/: MyCustomModule.cpp  MyCustomModule.hpp
examples/ex1_spu_only/: CMakeLists.txt  main_spu_only.cpp
examples/ex2_spu_custom/: CMakeLists.txt  main_spu_custom.cpp
examples/ex3_spu_aff3ct/: CMakeLists.txt  main_spu_aff3ct.cpp
templates/: CMakeLists.txt.j2  MyModule.cpp.j2  MyModule.hpp.j2  PassThrough.sv  README.md.j2  Top_Level.sv.j2  VerilatorSimulation.cpp.j2  VerilatorSimulation.hpp.j2  VerilatorSimulation_template.hpp  hw_module.sv.j2  main.cpp.j2  universal_simulation_top.sv.j2  view_waves.sh.j2
